# hamsci-dsp

./: .gitignore  README.md  pyproject.toml
docs/: REQUIREMENTS.md
src/hamsci_dsp/: __init__.py  constants.py  dsp.py  geometry.py  raytrace.py  timing.py
src/hamsci_dsp/ionosphere/: __init__.py  model.py  solar.py
src/hamsci_dsp/propagation/: __init__.py  carrier.py  oblique.py  scintillation.py
tests/: test_dsp.py  test_geometry.py  test_ionosphere_raytrace.py  test_propagation.py  test_scintillation_conventions.py  test_timing.py
