[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hamsci-dsp"
version = "0.1.0"
description = "Shared DSP / timing utilities for the HamSCI sigmond suite"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "mjh@hauan.org"},
]
# Deliberately dependency-light: the seed module (timing) is stdlib-only so
# any sigmond client can import it without pulling numpy.  DSP modules added
# later (carrier_tec, coherent) will add numpy here.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
