[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hamsci-dsp"
version = "0.2.0"
description = "Shared DSP / timing utilities for the HamSCI sigmond suite"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "mjh@hauan.org"},
]
# `hamsci_dsp.timing` is stdlib-only and importable without these; the
# numeric subpackages (geometry/dsp/propagation) need numpy + geographiclib,
# both light and universal across the suite.  Heavy/optional scientific
# engines are gated behind extras below.
dependencies = [
    "numpy>=1.24.0",
    "geographiclib>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# Ionospheric profile model (hamsci_dsp.ionosphere). Needs a Fortran build.
iono = [
    "iri2020>=1.7",
]
# HF ray tracing (hamsci_dsp.raytrace) — wraps HamSCI PyLAP/PHaRLAP; also
# requires the license-restricted PHaRLAP archive installed out-of-band.
raytrace = [
    "pylap",
]
# Geomagnetic (apex / quasi-dipole) coordinates.
geomag = [
    "apexpy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
